constraints/tests/samples/invalid-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: test-gatekeeper-valid
  labels:
    badLabel: test
