constraints/tests/samples/valid-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: test-gatekeeper-valid
  labels:
    gatekeeper: test
